@@ -362,6 +362,11 @@ Get the first preview buffer\.
 Get the first buffer\.
 .RE
 .PP
+\fBset_shutter_speed\fR \fISHUTTER_SPEED\fR
+.RS 4
+Set shutter speed\.
+.RE
+.PP
 \fBdisconnect\fR
 .RS 4
 Disconnects the client\. The server keeps running (for a while) and
