@@ -1,4 +1,5 @@
 version 0.83.01
+	servermode subcommand: set_shutter_speed
 
 version 0.83.00 ( 2016-01-29 )
 	Limited K-3 II support (Testing)
